Changelog
=========


1.2
---
* removed inline css on portlet 
  [fsprenger, 8.04.2010]

* added new, removed unused translations
  [phgross, 13.04.2010]

1.1
---

* removed the addToFavourites script. Now Using the standard Plone Favorites, and their script.
  [phgross, 10.03.2010]

* Added Brazilian Portuguese translation [lucmult]
* Improve management of Favorites folder, can be in this names: favourites,
  favorites, Favourites, Favourites, to integrate better with default Plone
  action [lucmult]

1.0
---

Initial release
