@@ -1,20 +1,23 @@
 <configure
     xmlns="http://namespaces.zope.org/zope"
-	xmlns:browser="http://namespaces.zope.org/browser"
-	xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    xmlns:browser="http://namespaces.zope.org/browser"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
     xmlns:i18n="http://namespaces.zope.org/i18n"
-	xmlns:cmf="http://namespaces.zope.org/cmf"
+    xmlns:cmf="http://namespaces.zope.org/cmf"
     i18n_domain="ftw.dashboard.portlets.favourites">
 
-	<include package="plone.app.portlets" />
-	<include package="collective.js.jqueryui" />
-	<include package=".browser" />
-	
-   <!-- Register locales translations -->
-   <i18n:registerTranslations directory="locales" />
+    <include package="plone.app.portlets" />
+    <include package="collective.js.jqueryui" />
+    <include package=".browser" />
 
-	<!-- Register the installation GenericSetup extension profile -->
-	<genericsetup:registerProfile
+    <!-- Register locales translations -->
+    <i18n:registerTranslations directory="locales" />
+
+    <cmf:registerDirectory
+       name="ftw_favourites"/>
+
+    <!-- Register the installation GenericSetup extension profile -->
+    <genericsetup:registerProfile
       name="default"
       title="ftw.dashboard.portlets.favourites"
       directory="profiles/default"
