@@ -8,7 +8,7 @@
   <object name="addtofavorites" meta_type="CMF Action" i18n:domain="plone">
    <property name="title" i18n:translate="">Add to favorites</property>
    <property name="description" i18n:translate=""></property>
-   <property name="url_expr">string:${object_url}/addtoFavorites</property>
+   <property name="url_expr">string:${object_url}/addToFavorites</property>
    <property name="icon_expr"> string:${object/portal_url}/++resource++ftw.dashboard.portlets.favourites.resources/icon_funktion_favoriten_negativ.gif</property>
    <property
       name="available_expr">python:(member is not None) and (portal.portal_membership.getHomeFolder() is not None)</property>
@@ -24,7 +24,7 @@
   <object name="addFavorite" meta_type="CMF Action" i18n:domain="plone">
    <property name="title" i18n:translate="">Add to favorites</property>
    <property name="description" i18n:translate=""></property>
-   <property name="url_expr">string:${object_url}/addtoFavorites</property>
+   <property name="url_expr">string:${object_url}/addToFavorites</property>
    <property name="icon_expr"> string:${object/portal_url}/++resource++ftw.dashboard.portlets.favourites.resources/icon_funktion_favoriten_negativ.gif</property>
    <property
       name="available_expr">python: portal.portal_membership.getHomeFolder() is not None</property>
