@@ -24,7 +24,7 @@ setup(name='ftw.dashboard.portlets.favourites',
       zip_safe=False,
       install_requires=[
           'setuptools',
-		  'collective.js.jqueryui',
+          'collective.js.jqueryui',
           # -*- Extra requirements: -*- 
       ],
       entry_points="""
